--- a/main.html
+++ b/main.html
@@ -19,6 +19,7 @@
     </div>
     <div class="footer">
         <h3>底部内容666</h3>
+        <p>xixi</p>
     </div>
 </div>
 <script src="./js/main.js"></script>
